# sails

./: .gitignore  .gitmodules  CMakeLists.txt  DependencyInstaller.sh  README.md  ccp4.envsetup-sh  sails-find.cpp  sails-find.h  sails-lib.cpp  sails-lib.h  sails-pybind11.cpp  sails.cpp  setup.py
python/sails/: __init__.py
source/sails/: sails-find.cpp  sails-find.h  sails-lib.cpp  sails-lib.h  sails.cpp
source/sails/tools/: sails-backend_combine.cpp  sails-backend_fingerprint.cpp  sails-backend_minimax.cpp
tools/: sails-backend_combine.cpp  sails-backend_fingerprint.cpp  sails-backend_minimax.cpp
unittests/: test_core.py
unittests/test_data/fingerprints/: 5o2x-MAN-4c1_max.map  5o2x-MAN-4c1_min.map
